# nyxnight

./: .gitignore  README.md
docs/: PRODUCT_SPEC.md  adk-generation-receipt.json
factory/: README.md  pyproject.toml
factory/blueprint/: pyproject.toml
factory/blueprint/nyxnight/: __init__.py  __main__.py  models.py
factory/blueprint/nyxnight/web/: index.html  styles.css
factory/blueprint/tests/: test_api.py  test_planner.py
factory/nyxnight_factory/: __init__.py  agents.py  run.py
factory/tests/: test_factory.py
nyxnight/: api.py  cli.py  planner.py
nyxnight/web/: app.js  styles.css
scripts/: verify.sh
tests/: test_api.py  test_ui_contract.py
